Implements Swagger for the projects handler
