# api/internal/api/handler/user.handler.go
@@ -34,6 +34,13 @@ func NewUsersHandler(
 	}
 }
 
+// swagger:route POST /auth/login Auth login
+//
+// Logs in a user returning a JWT for authentication
+// responses:
+//	200: accountResponse
+//  400: errorResponse
+//  500: errorResponse
 func (u *Users) Login(w http.ResponseWriter, r *http.Request) {
 	request, err := getDtoFromJSONBody[dto.LoginRequestDto](w, r)
 	if err != nil {
@@ -71,6 +78,14 @@ func (u *Users) Login(w http.ResponseWriter, r *http.Request) {
 	api.Respond(response, http.StatusOK, w)
 }
 
+// swagger:route POST /auth/register Auth register
+//
+// Registers a user in the system
+// responses:
+//	200: accountResponse
+//  400: errorResponse
+//  404: errorResponse
+//  500: errorResponse
 func (u *Users) Register(w http.ResponseWriter, r *http.Request) {
 	request, err := getDtoFromJSONBody[dto.RegistrationRequestDto](w, r)
 	if err != nil {
